--- a/app/src/main/res/layout/memories_dialog_layout.xml
+++ b/app/src/main/res/layout/memories_dialog_layout.xml
@@ -1,3 +1,7 @@
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
@@ -9,7 +13,6 @@ android:focusableInTouchMode="true"
 android:background="@color/app_background">
 
 <TextView
-    android:id="@+id/addTrip"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="Add memoris"
@@ -22,14 +25,31 @@ android:background="@color/app_background">
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="10dp"
+    android:layout_marginTop="5dp"
     android:orientation="vertical">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#009688"
+        android:text="Select Trip:"
+        android:textColor="#fff"
+        android:textSize="16sp"/>
+
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        style="@style/mySpinnerItemStyle"
+        android:backgroundTint="#fff"
+        android:popupBackground="#424242"
+        android:layout_marginTop="5dp"/>
 
     <ImageView
         android:id="@+id/memory_image"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:src="@drawable/pp"
+        android:layout_height="200dp"
+        android:src="@drawable/image_placeholder"
         android:scaleType="centerCrop"
         android:layout_marginTop="20dp"
         android:adjustViewBounds="true"/>
@@ -57,7 +77,7 @@ android:background="@color/app_background">
             android:maxLines="4"
             android:backgroundTint="#F6F6F6"
             android:textColor="@color/input_text_color"
-            android:drawableLeft="@drawable/ic_note"
+            android:drawableLeft="@drawable/ic_note_light"
             android:drawablePadding="10dp"
             android:inputType="textCapSentences|textMultiLine"
             android:imeOptions="actionNext"
@@ -90,3 +110,5 @@ android:background="@color/app_background">
     </LinearLayout>
 </LinearLayout>
 </LinearLayout>
+
+</RelativeLayout>
