--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
         android:background="@color/app_background"
-        tools:context=".MainActivity">
+        tools:context=".activity.MainActivity">
 
         <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:layout_width="match_parent"
