--- a/app/src/main/res/layout/fragment_users.xml
+++ b/app/src/main/res/layout/fragment_users.xml
@@ -7,7 +7,8 @@
     android:focusable="true"
     android:focusableInTouchMode="true"
     android:background="@color/app_background"
-    tools:context=".fragment.TripsFragment">
+    tools:context=".fragment.UsersFragment">
+
 
     <LinearLayout
         android:id="@+id/search_layout"
@@ -22,7 +23,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:singleLine="true"
-                android:hint="search by month..."
+                android:hint="search by user..."
                 android:drawableLeft="@drawable/ic_search"
                 android:drawablePadding="5dp"
                 android:backgroundTint="#F6F6F6"
@@ -35,8 +36,9 @@
     <androidx.recyclerview.widget.RecyclerView
         android:layout_below="@id/search_layout"
         android:layout_marginTop="20dp"
-        android:id="@+id/recyclerView"
+        android:id="@+id/usersRV"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/trip_recycler_item" />
+        tools:listitem="@layout/user_recycler_item"/>
+
 </RelativeLayout>
