--- a/app/src/main/res/layout/trip_recycler_item.xml
+++ b/app/src/main/res/layout/trip_recycler_item.xml
@@ -3,10 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/rounded_item"
-    android:layout_marginBottom="25dp"
-    app:cardCornerRadius="2dp">
+    android:layout_marginBottom="25dp">
 
     <LinearLayout
         android:layout_width="match_parent"
