--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -11,4 +11,8 @@
     <item android:id="@+id/nav_wallet"
         android:icon="@drawable/ic_wallet"
         android:title="Wallet"/>
+
+    <item android:id="@+id/nav_users"
+        android:icon="@drawable/ic_user"
+        android:title="User"/>
 </menu>
